--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(PRG1)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(PRG1 nicolet_labo1.cpp)
+add_executable(PRG1 nicolet_labo1.cpp nicolet_labo2.cpp)
