--- a/nicolet_labo17/CMakeLists.txt
+++ b/nicolet_labo17/CMakeLists.txt
@@ -3,4 +3,4 @@ project(nicolet_labo17)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(nicolet_labo17 main.cpp)
+add_executable(nicolet_labo17 nicolet_labo17.cpp)
