--- a/nicolet_labo18/CMakeLists.txt
+++ b/nicolet_labo18/CMakeLists.txt
@@ -3,4 +3,4 @@ project(nicolet_labo18)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(nicolet_labo18 main.cpp)
+add_executable(nicolet_labo18 nicolet_labo18.cpp)
