--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(PRG1)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(PRG1 exercice-recueil-taillard/exercice-class)
+add_executable(PRG1 BS-code.cpp)
