--- a/nicolet_labo16/CMakeLists.txt
+++ b/nicolet_labo16/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 project(nicolet_labo16)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 20)
 
-add_executable(nicolet_labo16
-        nicolet_labo16.cpp)
+add_executable(nicolet_labo16 nicolet_labo16.cpp)
