--- a/nicolet_labo21/CMakeLists.txt
+++ b/nicolet_labo21/CMakeLists.txt
@@ -3,4 +3,4 @@ project(nicolet_labo21)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(nicolet_labo21 main.cpp Uint.hpp)
+add_executable(nicolet_labo21 main.cpp Uint.cpp Prime.cpp)
